Fix text overflow in identities list

--- a/packages/frontend/src/styles/mixins.scss
+++ b/packages/frontend/src/styles/mixins.scss
@@ -15,6 +15,7 @@
     &__IdentifierContainer {
         display: flex;
         align-items: center;
+        min-width: 50px;
     }
 
     &__Avatar {
